# blacknet

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  bot.sh  connect.sh  setup.sh  update.sh
blacknet linux/: Makefile
blacknet linux/include/: GUI.h  GeoLocator.h  Utilities.h
blacknet linux/resources/: subdomains.txt  useragents.txt
blacknet linux/src/: AttackEngine.cpp  GUI.cpp  main.cpp
blacknet windows/: Makefile.win
blacknet windows/include/: BotManager.h  PacketBuilder.h  ProtocolHandler.h
blacknet windows/resources/: proxies.txt
blacknet windows/src/: GeoLocator.cpp  ProtocolHandler.cpp  Utilities.cpp
blacknet-windows/: Makefile.win
include/: AttackEngine.h  Obfuscate.h  ProxyManager.h
scripts/: build.sh  build_winbot.sh  install_deps.sh  run.sh
src/: BotManager.cpp  PacketBuilder.cpp  ProxyManager.cpp  blacknet_win.cpp
